--- a/configuration/settings.json
+++ b/configuration/settings.json
@@ -1,8 +1,11 @@
 {
-    "Api": {
-        "Url": "https://api.github.com"
-    },
-    "About": {
-        "Version": "1.0.0"
-    }
+  "Global": {
+    "ErrorColor": "Red"
+  },
+  "Api": {
+    "Url": "https://api.github.com"
+  },
+  "About": {
+    "Version": "1.0.0"
+  }
 }
