add create new PR function

--- a/configuration/settings.json
+++ b/configuration/settings.json
@@ -1,6 +1,7 @@
 {
   "Global": {
-    "ErrorColor": "Red"
+    "ErrorColor": "Red",
+    "Token": ""
   },
   "Api": {
     "Url": "https://api.github.com"
