--- a/configuration/settings.json
+++ b/configuration/settings.json
@@ -15,7 +15,7 @@
     "Url": "https://api.github.com"
   },
   "About": {
-    "Version": ""
+    "Version": "0.3.0"
   },
   "LogClear": {
     "LastClearDate": ""
